<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/relativeLayout">

    <Button
        android:id="@+id/listsBtn"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/lists_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manageBtn"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/manage_groups_button"
        app:layout_constraintEnd_toEndOf="@+id/gpsBtn"
        app:layout_constraintStart_toStartOf="@+id/gpsBtn"
        app:layout_constraintTop_toBottomOf="@+id/gpsBtn" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/share_button"
        app:layout_constraintEnd_toEndOf="@+id/listsBtn"
        app:layout_constraintStart_toStartOf="@+id/listsBtn"
        app:layout_constraintTop_toBottomOf="@+id/listsBtn" />

    <Button
        android:id="@+id/button2"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chat_button"
        app:layout_constraintEnd_toEndOf="@+id/shareBtn"
        app:layout_constraintStart_toStartOf="@+id/shareBtn"
        app:layout_constraintTop_toBottomOf="@+id/shareBtn" />

    <Button
        android:id="@+id/button3"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dinner_button"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/calendarBtn"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calendar_button"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/gpsBtn"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gps_button"
        app:layout_constraintEnd_toEndOf="@+id/calendarBtn"
        app:layout_constraintStart_toStartOf="@+id/calendarBtn"
        app:layout_constraintTop_toBottomOf="@+id/calendarBtn" />
</android.support.constraint.ConstraintLayout>