<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHomeworkActivity">

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/description_text_field"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dueDateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/due_date_field"
        app:layout_constraintEnd_toEndOf="@+id/descriptionTextView"
        app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <CheckedTextView
        android:id="@+id/enablePushNotificationsCheckedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enable_push_notifications_textfield"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/dueDateField"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dueDateField"
        app:layout_constraintTop_toBottomOf="@+id/dueDateField" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/attachment_button"
        app:layout_constraintEnd_toEndOf="@+id/enablePushNotificationsCheckedTextView"
        app:layout_constraintStart_toStartOf="@+id/enablePushNotificationsCheckedTextView"
        app:layout_constraintTop_toBottomOf="@+id/enablePushNotificationsCheckedTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_notes_textview"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelBtn" />

</android.support.constraint.ConstraintLayout>