<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListChoicesActivity">

    <Button
        android:id="@+id/homeworkBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/homework_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/projectsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/projects_button"
        app:layout_constraintEnd_toEndOf="@+id/homeworkBtn"
        app:layout_constraintStart_toStartOf="@+id/homeworkBtn"
        app:layout_constraintTop_toBottomOf="@+id/homeworkBtn" />

    <Button
        android:id="@+id/todoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/todo_button"
        app:layout_constraintEnd_toEndOf="@+id/projectsBtn"
        app:layout_constraintStart_toStartOf="@+id/projectsBtn"
        app:layout_constraintTop_toBottomOf="@+id/projectsBtn" />

    <Button
        android:id="@+id/shoppingListBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shopping_button"
        app:layout_constraintEnd_toEndOf="@+id/todoBtn"
        app:layout_constraintStart_toStartOf="@+id/todoBtn"
        app:layout_constraintTop_toBottomOf="@+id/todoBtn" />

    <Button
        android:id="@+id/customListBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/custom_button"
        app:layout_constraintEnd_toEndOf="@+id/shoppingListBtn"
        app:layout_constraintStart_toStartOf="@+id/shoppingListBtn"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListBtn" />
</android.support.constraint.ConstraintLayout>